--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "author": "Abdul Kalam",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.0"
+    "express": "^4.21.0",
+    "mongodb": "^6.9.0",
+    "mongoose": "^8.7.1"
   }
 }
