--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Abdul Kalam",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^4.21.0",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.1",
